Bugzilla Bug 88747 nsCRT::atoi should be removed or fixed previous definition just recursed infinitely. |::atoi| takes a |char*|. r=dbradley sr=scc